review the code for more standardized